# ml-driving-behavior

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
_index/: session_dirs.txt  sessions_draft.csv
config/: pipeline.yml
data/: README.md
data/features/: uah_v1_win5_overlap50.parquet
data/raw/uah_driveset/metadata/: sessions.csv
docs/: REPRO.md  experiments.md  index.md  pipeline.md
experiments/: index.html
paper/: README.md  main.tex  refs.bib
paper/tabs/: summary_models.csv
pipeline/: index.html
results_ablation/: summary_driver_win10_bal.csv
results_audit/: ablation_rf10.csv  ablation_rf10.txt  audit_summary.csv  audit_summary.md  best_threshold_motorway.txt  cm_default_all.csv  cm_default_motorway.csv  cm_default_secondary.csv  cm_linsvc_driver_win10_bal.csv  cm_linsvc_driver_win10_bal_motorway.csv  cm_linsvc_driver_win10_bal_secondary.csv  cm_linsvc_driver_win5_bal.csv  cm_linsvc_driver_win5_bal_motorway.csv  cm_linsvc_driver_win5_bal_secondary.csv  cm_logreg_driver_win10_bal.csv  cm_logreg_driver_win10_bal_motorway.csv  cm_logreg_driver_win10_bal_secondary.csv  cm_logreg_driver_win5_bal.csv  cm_logreg_driver_win5_bal_motorway.csv  cm_logreg_driver_win5_bal_secondary.csv  cm_rf_driver_abs.csv  cm_rf_driver_win10_bal_motorway.csv  cm_rf_driver_win10_bal_secondary.csv  cm_rf_driver_win5_bal.csv  cm_rf_driver_win5_bal_motorway.csv  cm_rf_driver_win5_bal_secondary.csv  cm_tau_motorway_all.csv  cm_tau_motorway_motorway.csv  compare_rf_driver_5s_10s.csv  drowsy_to_normal_by_driver.csv  drowsy_to_normal_by_route.csv  drowsy_to_normal_cases.csv  fairness_by_driver.csv  fairness_by_route.csv  perroute_linsvc_driver_win10_bal.csv  perroute_linsvc_driver_win5_bal.csv  perroute_logreg_driver_win10_bal.csv  perroute_logreg_driver_win5_bal.csv  perroute_rf_driver_win10_bal.csv  perroute_rf_driver_win5_bal.csv  (+22 more)
search/: search_index.json
src/: 01_extract_features.py
