[tool.poetry]
name = "ml-driving-behavior"
version = "0.1.0"
description = "Driving behavior classification (UAH-DriveSet): pipeline e experimentos"
authors = ["LBSL98 <brunnosink2@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.3.4"
pandas = "^2.3.3"
scipy = "^1.16.3"
scikit-learn = "^1.7.2"
pyarrow = "^22.0.0"
tqdm = "^4.67.1"
matplotlib = "^3.10.7"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^7.0.0"
ruff = "^0.14.4"
pre-commit = "^4.3.0"
pytest = "^8.4.2"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.23"
mkdocstrings = "^0.30.1"
mkdocstrings-python = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","C4","SIM"]
ignore = ["E203","E266","E501"]
exclude = ["site","data/raw","data/interim","data/features"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
